--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
         <div class="top">
           <label for="" class="btn close-btn"><i class="fas fa-times"></i></label>
         </div>
-        <li><a href="/E-Commerce-Website">Home</a></li>
-        <li><a href="/E-Commerce-Website/product.html">Products</a></li>
+        <li><a href="/index.html">Home</a></li>
+        <li><a href="/product.html">Products</a></li>
         <li>
           <a href="" class="desktop-item">Shop <span><i class="fas fa-chevron-down"></i></span></a>
           <input type="checkbox" id="showMega" />
